--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
     <div class="content">
         <span class="hi"> hi there... </span>
-        <h3> i am <span>Htet Wai Yan Aung</span> </h3>
+        <h3 class="animate__animated animate__backInLeft"> i am <span>Htet Wai Yan Aung</span> </h3>
         <p class="info"> i am a front-end developer</p>
         <p class="text"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit veniam nesciunt vero officiis? Perferendis similique iste reprehenderit. Aperiam nam molestiae illum expedita ullam voluptas recusandae, numquam fugiat neque officiis aut? </p>
         <a href="#about" class="btn">about me</a>
     </div>
 
-    <div class="image">
+    <div class="image animate__animated animate__bounceInRight">
         <img src="my_profile_pic.jpg" alt="profile-img">
     </div>
 
